src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void flann_Index_Delete(void* self);
extern "C" __declspec(dllexport) void* flann_Index_New_0();
extern "C" __declspec(dllexport) void* flann_Index_New_1(void* features, void* params, void* distType);
extern "C" __declspec(dllexport) void flann_Index_build_0(void* self, void* features, void* params, void* distType);
extern "C" __declspec(dllexport) void flann_Index_knnSearch_0(void* self, void* query, void* indices, void* dists, int knn, void* params);
extern "C" __declspec(dllexport) int flann_Index_radiusSearch_0(void* self, void* query, void* indices, void* dists, double radius, int maxResults, void* params);
extern "C" __declspec(dllexport) void flann_Index_save_0(void* self, const char* filename);
extern "C" __declspec(dllexport) bool flann_Index_load_0(void* self, void* features, const char* filename);
extern "C" __declspec(dllexport) void flann_Index_release_0(void* self);
extern "C" __declspec(dllexport) void* flann_Index_getDistance_0(void* self);
extern "C" __declspec(dllexport) void* flann_Index_getAlgorithm_0(void* self);
extern "C" __declspec(dllexport) void flann_IndexParams_Delete(void* self);
extern "C" __declspec(dllexport) void* flann_IndexParams_New_0();
extern "C" __declspec(dllexport) void flann_SearchParams_Delete(void* self);
extern "C" __declspec(dllexport) void* flann_SearchParams_New_0();