src/OpenCV5Sharp/Generated/NativeMethods.Flann.cs

// Copyright (c) 2026 Qourex. Licensed under Apache-2.0.
// See LICENSE file in the project root for full license information.
// AUTO-GENERATED FILE — DO NOT EDIT MANUALLY. Generated by generator.py.

using System;
using System.Runtime.InteropServices;

namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void flann_Index_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr flann_Index_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr flann_Index_New_1(MatHandle features, IntPtr @params, int distType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void flann_Index_build_0(FlannIndexHandle self, MatHandle features, IntPtr @params, int distType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void flann_Index_knnSearch_0(FlannIndexHandle self, MatHandle query, MatHandle indices, MatHandle dists, int knn, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int flann_Index_radiusSearch_0(FlannIndexHandle self, MatHandle query, MatHandle indices, MatHandle dists, double radius, int maxResults, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void flann_Index_save_0(FlannIndexHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool flann_Index_load_0(FlannIndexHandle self, MatHandle features, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void flann_Index_release_0(FlannIndexHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int flann_Index_getDistance_0(FlannIndexHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int flann_Index_getAlgorithm_0(FlannIndexHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void flann_IndexParams_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr flann_IndexParams_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void flann_SearchParams_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr flann_SearchParams_New_0();
    }
}
